--- a/app/globals.css
+++ b/app/globals.css
@@ -35,8 +35,10 @@
     --radius: 0.5rem;
   }
  
+  /* .dark { */
   .dark {
-    --background: 222.2 84% 4.9%;
+    /* --background: 222.2 84% 4.9%; */
+    --background: 25, 89%, 61%;
     --foreground: 210 40% 98%;
  
     --card: 222.2 84% 4.9%;
